Fix width issue due to whitespace

--- a/src/mm-input-mask/mm-input-mask.scss
+++ b/src/mm-input-mask/mm-input-mask.scss
@@ -45,10 +45,10 @@
 		border: none;
 		box-shadow: none;
 		width: auto;
-		padding: 0;
-		margin: 0;
-		height: 29px;
-		line-height: 2.231em !important;
+		// padding: 0;
+		// margin: 0;
+		// height: 29px;
+		// line-height: 2.231em !important;
 		background: none;
 
 		@include transition(width .3s ease-in-out);
